--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,12 @@ anyio==3.6.1
 bcrypt==3.2.2
 broadlink==0.16.0
 cffi==1.15.0
+cryptography==37.0.2
 ecdsa==0.17.0
 fastapi==0.78.0
 greenlet==1.1.2
 idna==3.3
 passlib==1.7.4
-psycopg2==2.9.3
-psycopg2-binary==2.9.3
 pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.9.1
